logs/tracking/build.make.692.log.stderr
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp: In member function ‘void DepthFilter::initializeFilter(cv::Mat, Eigen::Matrix<float, 2, -1>)’:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:76:79: error: temporary of non-literal type ‘Eigen::Matrix<float, 4, -1>’ in a constant expression
  filter = boost::make_shared<Eigen::Matrix<float,4,Eigen::Dynamic>(filter_init);
                                                                               ^
In file included from /usr/include/eigen3/Eigen/Core:294:0,
                 from /usr/include/eigen3/Eigen/Dense:1,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/ImageProcessing.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:6,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/eigen3/Eigen/src/Core/Matrix.h:127:7: note: ‘Eigen::Matrix<float, 4, -1>’ is not literal because:
 class Matrix
       ^
/usr/include/eigen3/Eigen/src/Core/Matrix.h:127:7: note:   ‘Eigen::Matrix<float, 4, -1>’ has a non-trivial destructor
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:76:18: error: parse error in template argument list
  filter = boost::make_shared<Eigen::Matrix<float,4,Eigen::Dynamic>(filter_init);
                  ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:76:9: error: no match for ‘operator=’ (operand types are ‘boost::shared_ptr<Eigen::Matrix<float, 4, -1> >’ and ‘<unresolved overloaded function type>’)
  filter = boost::make_shared<Eigen::Matrix<float,4,Eigen::Dynamic>(filter_init);
         ^
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:76:9: note: candidates are:
In file included from /usr/include/boost/shared_ptr.hpp:17:0,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:8,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/boost/smart_ptr/shared_ptr.hpp:505:18: note: boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(const boost::shared_ptr<T>&) [with T = Eigen::Matrix<float, 4, -1>]
     shared_ptr & operator=( shared_ptr const & r ) BOOST_NOEXCEPT
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:505:18: note:   no known conversion for argument 1 from ‘<unresolved overloaded function type>’ to ‘const boost::shared_ptr<Eigen::Matrix<float, 4, -1> >&’
/usr/include/boost/smart_ptr/shared_ptr.hpp:514:18: note: template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(const boost::shared_ptr<Y>&) [with Y = Y; T = Eigen::Matrix<float, 4, -1>]
     shared_ptr & operator=(shared_ptr<Y> const & r) BOOST_NOEXCEPT
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:514:18: note:   template argument deduction/substitution failed:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:76:9: note:   couldn't deduce template parameter ‘Y’
  filter = boost::make_shared<Eigen::Matrix<float,4,Eigen::Dynamic>(filter_init);
         ^
In file included from /usr/include/boost/shared_ptr.hpp:17:0,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:8,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/boost/smart_ptr/shared_ptr.hpp:525:18: note: template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(std::auto_ptr<_Up>&) [with Y = Y; T = Eigen::Matrix<float, 4, -1>]
     shared_ptr & operator=( std::auto_ptr<Y> & r )
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:525:18: note:   template argument deduction/substitution failed:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:76:9: note:   couldn't deduce template parameter ‘Y’
  filter = boost::make_shared<Eigen::Matrix<float,4,Eigen::Dynamic>(filter_init);
         ^
In file included from /usr/include/boost/shared_ptr.hpp:17:0,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:8,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/boost/smart_ptr/shared_ptr.hpp:534:18: note: template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(std::auto_ptr<_Up>&&) [with Y = Y; T = Eigen::Matrix<float, 4, -1>]
     shared_ptr & operator=( std::auto_ptr<Y> && r )
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:534:18: note:   template argument deduction/substitution failed:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:76:9: note:   couldn't deduce template parameter ‘Y’
  filter = boost::make_shared<Eigen::Matrix<float,4,Eigen::Dynamic>(filter_init);
         ^
In file included from /usr/include/boost/shared_ptr.hpp:17:0,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:8,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/boost/smart_ptr/shared_ptr.hpp:556:18: note: template<class Y, class D> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(std::unique_ptr<_Up, _Ep>&&) [with Y = Y; D = D; T = Eigen::Matrix<float, 4, -1>]
     shared_ptr & operator=( std::unique_ptr<Y, D> && r )
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:556:18: note:   template argument deduction/substitution failed:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:76:9: note:   couldn't deduce template parameter ‘Y’
  filter = boost::make_shared<Eigen::Matrix<float,4,Eigen::Dynamic>(filter_init);
         ^
In file included from /usr/include/boost/shared_ptr.hpp:17:0,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:8,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/boost/smart_ptr/shared_ptr.hpp:592:18: note: boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(boost::shared_ptr<T>&&) [with T = Eigen::Matrix<float, 4, -1>]
     shared_ptr & operator=( shared_ptr && r ) BOOST_NOEXCEPT
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:592:18: note:   no known conversion for argument 1 from ‘<unresolved overloaded function type>’ to ‘boost::shared_ptr<Eigen::Matrix<float, 4, -1> >&&’
/usr/include/boost/smart_ptr/shared_ptr.hpp:599:18: note: template<class Y> boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(boost::shared_ptr<Y>&&) [with Y = Y; T = Eigen::Matrix<float, 4, -1>]
     shared_ptr & operator=( shared_ptr<Y> && r ) BOOST_NOEXCEPT
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:599:18: note:   template argument deduction/substitution failed:
/home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:76:9: note:   couldn't deduce template parameter ‘Y’
  filter = boost::make_shared<Eigen::Matrix<float,4,Eigen::Dynamic>(filter_init);
         ^
In file included from /usr/include/boost/shared_ptr.hpp:17:0,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/DepthFilter.h:8,
                 from /home/dexheimere/thesis_ws/src/tracking/src/DepthFilter.cpp:1:
/usr/include/boost/smart_ptr/shared_ptr.hpp:609:18: note: boost::shared_ptr<T>& boost::shared_ptr<T>::operator=(boost::detail::sp_nullptr_t) [with T = Eigen::Matrix<float, 4, -1>; boost::detail::sp_nullptr_t = std::nullptr_t]
     shared_ptr & operator=( boost::detail::sp_nullptr_t ) BOOST_NOEXCEPT // never throws
                  ^
/usr/include/boost/smart_ptr/shared_ptr.hpp:609:18: note:   no known conversion for argument 1 from ‘<unresolved overloaded function type>’ to ‘boost::detail::sp_nullptr_t {aka std::nullptr_t}’
make[2]: *** [CMakeFiles/tracking.dir/src/DepthFilter.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/main.cpp:20:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
